# declarative-resource-client-library

./: .gitallowed  BUILD  BUILDING.md  WORKSPACE  go.mod  go.sum
dcl/: BUILD.bazel  canonicalize.go  client.go  config.go  context.go  declarative.go  diff.go  diff_utils.go  errors.go  flatten.go  locations.go  marshallers.go  project_id.go  resource.go  retry.go  schema.go  strings.go  timestamp.go  transport.go  type.go  update.go  utils.go  validate.go
dcl/operations/: acm.go  compute.go  crm.go  datastore.go  dns.go  knative.go  monitoring.go  operations.go  osconfig.go  sql.go
serialization/: BUILD.bazel  kcc_yaml.go  serialization.go  tf_resource.go
services/: BUILD.bazel  directory.go
services/google/accesscontextmanager/: BUILD.bazel  access_level.go  access_level.yaml  access_level_internal.go  access_level_yaml_embed.go  access_policy.go  access_policy.yaml  access_policy_internal.go  access_policy_yaml_embed.go  accesscontextmanager_utils.go  client.go  operations.go  service_perimeter.go  service_perimeter.yaml  service_perimeter_internal.go  service_perimeter_yaml_embed.go
services/google/apigee/: apigee_utils.go  attachment.go  attachment.yaml  attachment_internal.go  attachment_yaml_embed.go  client.go  envgroup.go  envgroup.yaml  envgroup_internal.go  envgroup_yaml_embed.go  environment.go  environment.yaml  environment_group.go  environment_group.yaml  environment_group_attachment.go  environment_group_attachment_internal.go  environment_group_attachment_schema.go  environment_group_attachment_yaml_embed.go  environment_group_internal.go  environment_group_schema.go  environment_group_yaml_embed.go  environment_internal.go  environment_schema.go  environment_yaml_embed.go  instance.go  instance.yaml  instance_internal.go  instance_schema.go  instance_yaml_embed.go  organization.go  organization.yaml  organization_internal.go  organization_schema.go  organization_yaml_embed.go
services/google/apikeys/: apikeys_utils.go  client.go  key.go  key.yaml  key_internal.go  key_schema.go  key_yaml_embed.go
services/google/appengine/: BUILD.bazel  appengine_utils.go  application.go  application.yaml  application_internal.go  application_yaml_embed.go  client.go  domain_mapping.go  domain_mapping.yaml  domain_mapping_internal.go  domain_mapping_yaml_embed.go  firewall_rule.go  firewall_rule.yaml  firewall_rule_internal.go  firewall_rule_yaml_embed.go  operations.go  version.go  version.yaml  version_internal.go  version_yaml_embed.go
services/google/assuredworkloads/: assuredworkloads_utils.go  client.go  workload.go  workload.yaml  workload_internal.go  workload_schema.go  workload_yaml_embed.go
services/google/bigquery/: bigquery_utils.go  client.go  dataset.go  dataset.yaml  dataset_internal.go  dataset_schema.go  dataset_yaml_embed.go  routine.go  routine.yaml  routine_internal.go  routine_schema.go  routine_yaml_embed.go  table.go  table.yaml  table_internal.go  table_yaml_embed.go
services/google/bigqueryconnection/: client.go  connection.go  connection.yaml  connection_internal.go  connection_yaml_embed.go
services/google/bigqueryreservation/: BUILD.bazel  assignment.go  assignment.yaml  assignment_internal.go  assignment_schema.go  assignment_yaml_embed.go  bigqueryreservation_utils.go  capacity_commitment.go  capacity_commitment.yaml  capacity_commitment_internal.go  capacity_commitment_schema.go  capacity_commitment_yaml_embed.go  client.go  reservation.go  reservation.yaml  reservation_internal.go  reservation_schema.go  reservation_yaml_embed.go
services/google/billingbudgets/: billingbudgets_utils.go  budget.go  budget.yaml  budget_internal.go  budget_schema.go  budget_yaml_embed.go  client.go
services/google/binaryauthorization/: attestor.go  attestor.yaml  attestor_internal.go  attestor_schema.go  attestor_yaml_embed.go  binaryauthorization_utils.go  client.go  policy.go  policy.yaml  policy_internal.go  policy_schema.go  policy_yaml_embed.go
services/google/cloudbilling/: client.go  cloudbilling_utils.go  project_billing_info.go  project_billing_info.yaml  project_billing_info_internal.go  project_billing_info_yaml_embed.go
services/google/cloudbuild/: build_trigger.go  build_trigger.yaml  build_trigger_internal.go  build_trigger_yaml_embed.go  client.go  cloudbuild_utils.go  operation.go  worker_pool.go  worker_pool.yaml  worker_pool_internal.go  worker_pool_schema.go  worker_pool_yaml_embed.go
services/google/cloudbuildv2/: client.go  connection.go  connection.yaml  connection_internal.go  connection_schema.go  connection_yaml_embed.go  repository.go  repository.yaml  repository_internal.go  repository_schema.go  repository_yaml_embed.go
services/google/clouddeploy/: client.go  delivery_pipeline.go  delivery_pipeline.yaml  delivery_pipeline_internal.go  delivery_pipeline_schema.go  delivery_pipeline_yaml_embed.go  target.go  target.yaml  target_internal.go  target_schema.go  target_yaml_embed.go
services/google/cloudfunctions/: client.go  cloud_function.go  cloud_function.yaml  cloud_function_internal.go  function.go  function.yaml  function_internal.go  function_schema.go  function_yaml_embed.go  functions_utils.go  operations.go
services/google/cloudidentity/: client.go  group.go  group.yaml  group_internal.go  group_schema.go  group_yaml_embed.go  identity_utils.go  membership.go  membership.yaml  membership_internal.go  membership_schema.go  membership_yaml_embed.go
services/google/cloudkms/: client.go  crypto_key.go  crypto_key.yaml  crypto_key_internal.go  crypto_key_schema.go  crypto_key_yaml_embed.go  ekm_connection.go  ekm_connection.yaml  ekm_connection_internal.go  ekm_connection_schema.go  ekm_connection_yaml_embed.go  key_ring.go  key_ring.yaml  key_ring_internal.go  key_ring_schema.go  key_ring_yaml_embed.go
services/google/cloudresourcemanager/: BUILD.bazel  client.go  folder.go  folder.yaml  folder_internal.go  folder_schema.go  folder_yaml_embed.go  operations.go  project.go  project.yaml  project_internal.go  project_schema.go  project_yaml_embed.go  resourcemanager_utils.go  tag_key.go  tag_key.yaml  (+7 more)
(+6295 files in other folders)
