load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "canonicalize.go",
        "client.go",
        "config.go",
        "declarative.go",
        "errors.go",
        "flatten.go",
        "marshallers.go",
        "resource.go",
        "retry.go",
        "strings.go",
        "timestamp.go",
        "transport.go",
        "type.go",
        "validate.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/declarative-resource-client-library/dcl",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_cenkalti_backoff//:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_kylelemons_godebug//pretty:go_default_library",
        "@org_bitbucket_creachadair_stringset//:go_default_library",
        "@org_golang_google_api//googleapi:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
        "@org_golang_x_oauth2//google:go_default_library",
    ],
)
