load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["directory.go"],
    importpath = "github.com/GoogleCloudPlatform/declarative-resource-client-library/services",
    visibility = ["//visibility:public"],
    deps = [
        "//dcl:go_default_library",
        "//services/google/assuredworkloads:go_default_library",
        "//services/google/assuredworkloads/beta:go_default_library",
        "//services/google/bigqueryreservation:go_default_library",
        "//services/google/bigqueryreservation/beta:go_default_library",
        "//services/google/binaryauthorization:go_default_library",
        "//services/google/binaryauthorization/beta:go_default_library",
        "//services/google/cloudbuild/beta:go_default_library",
        "//services/google/cloudscheduler:go_default_library",
        "//services/google/cloudscheduler/beta:go_default_library",
        "//services/google/compute:go_default_library",
        "//services/google/compute/beta:go_default_library",
        "//services/google/containeranalysis:go_default_library",
        "//services/google/containeranalysis/beta:go_default_library",
        "//services/google/datafusion/beta:go_default_library",
        "//services/google/dataproc:go_default_library",
        "//services/google/dataproc/beta:go_default_library",
        "//services/google/eventarc:go_default_library",
        "//services/google/eventarc/beta:go_default_library",
        "//services/google/file:go_default_library",
        "//services/google/file/beta:go_default_library",
        "//services/google/gameservices:go_default_library",
        "//services/google/gameservices/beta:go_default_library",
        "//services/google/gkehub/beta:go_default_library",
        "//services/google/gkemulticloud:go_default_library",
        "//services/google/gkemulticloud/beta:go_default_library",
        "//services/google/iam:go_default_library",
        "//services/google/iam/beta:go_default_library",
        "//services/google/iap:go_default_library",
        "//services/google/iap/beta:go_default_library",
        "//services/google/identitytoolkit:go_default_library",
        "//services/google/identitytoolkit/beta:go_default_library",
        "//services/google/logging:go_default_library",
        "//services/google/logging/beta:go_default_library",
        "//services/google/monitoring:go_default_library",
        "//services/google/monitoring/beta:go_default_library",
        "//services/google/networksecurity/alpha:go_default_library",
        "//services/google/networksecurity/beta:go_default_library",
        "//services/google/networkservices/alpha:go_default_library",
        "//services/google/networkservices/beta:go_default_library",
        "//services/google/osconfig/alpha:go_default_library",
        "//services/google/osconfig/beta:go_default_library",
        "//services/google/tier2/alpha:go_default_library",
    ],
)
