load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["directory.go"],
    importpath = "github.com/GoogleCloudPlatform/declarative-resource-client-library/services",
    visibility = ["//visibility:public"],
    deps = [
        "//dcl:go_default_library",
        "//services/google/assuredworkloads:go_default_library",
        "//services/google/assuredworkloads/alpha:go_default_library",
        "//services/google/assuredworkloads/beta:go_default_library",
        "//services/google/bigqueryreservation:go_default_library",
        "//services/google/bigqueryreservation/alpha:go_default_library",
        "//services/google/bigqueryreservation/beta:go_default_library",
        "//services/google/binaryauthorization:go_default_library",
        "//services/google/binaryauthorization/alpha:go_default_library",
        "//services/google/binaryauthorization/beta:go_default_library",
        "//services/google/cloudbuild/alpha:go_default_library",
        "//services/google/cloudbuild/beta:go_default_library",
        "//services/google/cloudkms:go_default_library",
        "//services/google/cloudkms/alpha:go_default_library",
        "//services/google/cloudkms/beta:go_default_library",
        "//services/google/cloudresourcemanager:go_default_library",
        "//services/google/cloudresourcemanager/alpha:go_default_library",
        "//services/google/cloudresourcemanager/beta:go_default_library",
        "//services/google/cloudscheduler:go_default_library",
        "//services/google/cloudscheduler/alpha:go_default_library",
        "//services/google/cloudscheduler/beta:go_default_library",
        "//services/google/compute:go_default_library",
        "//services/google/compute/alpha:go_default_library",
        "//services/google/compute/beta:go_default_library",
        "//services/google/containeranalysis:go_default_library",
        "//services/google/containeranalysis/alpha:go_default_library",
        "//services/google/containeranalysis/beta:go_default_library",
        "//services/google/containeraws/alpha:go_default_library",
        "//services/google/containerazure/alpha:go_default_library",
        "//services/google/datafusion/alpha:go_default_library",
        "//services/google/datafusion/beta:go_default_library",
        "//services/google/dataproc:go_default_library",
        "//services/google/dataproc/alpha:go_default_library",
        "//services/google/dataproc/beta:go_default_library",
        "//services/google/eventarc:go_default_library",
        "//services/google/eventarc/alpha:go_default_library",
        "//services/google/eventarc/beta:go_default_library",
        "//services/google/filestore:go_default_library",
        "//services/google/filestore/alpha:go_default_library",
        "//services/google/filestore/beta:go_default_library",
        "//services/google/gameservices:go_default_library",
        "//services/google/gameservices/alpha:go_default_library",
        "//services/google/gameservices/beta:go_default_library",
        "//services/google/gkehub/alpha:go_default_library",
        "//services/google/gkehub/beta:go_default_library",
        "//services/google/iam:go_default_library",
        "//services/google/iam/alpha:go_default_library",
        "//services/google/iam/beta:go_default_library",
        "//services/google/iap:go_default_library",
        "//services/google/iap/alpha:go_default_library",
        "//services/google/iap/beta:go_default_library",
        "//services/google/identitytoolkit:go_default_library",
        "//services/google/identitytoolkit/alpha:go_default_library",
        "//services/google/identitytoolkit/beta:go_default_library",
        "//services/google/krmapihosting/alpha:go_default_library",
        "//services/google/logging:go_default_library",
        "//services/google/logging/alpha:go_default_library",
        "//services/google/logging/beta:go_default_library",
        "//services/google/monitoring:go_default_library",
        "//services/google/monitoring/alpha:go_default_library",
        "//services/google/monitoring/beta:go_default_library",
        "//services/google/networkconnectivity/alpha:go_default_library",
        "//services/google/networksecurity/alpha:go_default_library",
        "//services/google/networkservices/alpha:go_default_library",
        "//services/google/orgpolicy:go_default_library",
        "//services/google/orgpolicy/alpha:go_default_library",
        "//services/google/orgpolicy/beta:go_default_library",
        "//services/google/osconfig/alpha:go_default_library",
        "//services/google/osconfig/beta:go_default_library",
        "//services/google/privateca:go_default_library",
        "//services/google/privateca/alpha:go_default_library",
        "//services/google/privateca/beta:go_default_library",
        "//services/google/pubsub:go_default_library",
        "//services/google/pubsub/alpha:go_default_library",
        "//services/google/pubsub/beta:go_default_library",
        "//services/google/storage:go_default_library",
        "//services/google/storage/alpha:go_default_library",
        "//services/google/storage/beta:go_default_library",
        "//services/google/vmwareengine/alpha:go_default_library",
    ],
)
