load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "appengine_utils.go",
        "application.go",
        "application_internal.go",
        "client.go",
        "operations.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/declarative-resource-client-library/services/google/appengine",
    visibility = ["//visibility:public"],
    deps = [
        "//dcl:go_default_library",
        "//services/google/cloudresourcemanager:go_default_library",
        "@com_github_mohae_deepcopy//:go_default_library",
        "@org_golang_google_api//googleapi:go_default_library",
    ],
)
