load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "assignment.go",
        "assignment_internal.go",
        "assignment_yaml_embed.go",
        "client.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/declarative-resource-client-library/services/google/bigqueryreservation",
    visibility = ["//visibility:public"],
    deps = [
        "//dcl:go_default_library",
        "@org_golang_google_api//googleapi:go_default_library",
    ],
)
