load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "operations.go",
        "project.go",
        "project_internal.go",
        "resourcemanager_utils.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/declarative-resource-client-library/services/google/cloudresourcemanager",
    visibility = ["//visibility:public"],
    deps = [
        "//dcl:go_default_library",
        "@com_github_mohae_deepcopy//:go_default_library",
        "@org_golang_google_api//googleapi:go_default_library",
    ],
)
