load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "filestore_utils.go",
        "instance.go",
        "instance_internal.go",
        "instance_yaml_embed.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/declarative-resource-client-library/services/google/filestore",
    visibility = ["//visibility:public"],
    deps = [
        "//dcl:go_default_library",
        "//dcl/operations:go_default_library",
        "@org_golang_google_api//googleapi:go_default_library",
    ],
)
