load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "alert_policy.go",
        "alert_policy_internal.go",
        "client.go",
        "dashboard.go",
        "dashboard_internal.go",
        "notification_channel.go",
        "notification_channel_internal.go",
        "operations.go",
        "uptime_check_config.go",
        "uptime_check_config_internal.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/declarative-resource-client-library/services/google/monitoring",
    visibility = ["//visibility:public"],
    deps = [
        "//dcl:go_default_library",
        "@com_github_mohae_deepcopy//:go_default_library",
        "@org_golang_google_api//googleapi:go_default_library",
    ],
)
