load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "dashboard.go",
        "dashboard_internal.go",
        "dashboard_yaml_embed.go",
        "group.go",
        "group_internal.go",
        "group_yaml_embed.go",
        "monitoring_utils.go",
        "operations.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/declarative-resource-client-library/services/google/monitoring",
    visibility = ["//visibility:public"],
    deps = [
        "//dcl:go_default_library",
        "@org_golang_google_api//googleapi:go_default_library",
    ],
)
