load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "database.go",
        "database_internal.go",
        "instance.go",
        "instance_internal.go",
        "operations.go",
        "sql_utils.go",
        "ssl_cert.go",
        "ssl_cert_internal.go",
        "user.go",
        "user_internal.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/declarative-resource-client-library/services/google/sql",
    visibility = ["//visibility:public"],
    deps = [
        "//dcl:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_mohae_deepcopy//:go_default_library",
        "@org_golang_google_api//googleapi:go_default_library",
    ],
)
