load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "assignment.go",
        "assignment_alpha_yaml_embed.go",
        "assignment_internal.go",
        "bigqueryreservation_utils.go",
        "capacity_commitment.go",
        "capacity_commitment_alpha_yaml_embed.go",
        "capacity_commitment_internal.go",
        "client.go",
        "reservation.go",
        "reservation_alpha_yaml_embed.go",
        "reservation_internal.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/declarative-resource-client-library/services/google/bigqueryreservation/alpha",
    visibility = ["//visibility:public"],
    deps = [
        "//dcl:go_default_library",
        "//dcl/operations:go_default_library",
        "@org_golang_google_api//googleapi:go_default_library",
    ],
)
