load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "attestor.go",
        "attestor_beta_yaml_embed.go",
        "attestor_internal.go",
        "binaryauthorization_utils.go",
        "client.go",
        "policy.go",
        "policy_beta_yaml_embed.go",
        "policy_internal.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/declarative-resource-client-library/services/google/binaryauthorization/beta",
    visibility = ["//visibility:public"],
    deps = [
        "//dcl:go_default_library",
        "@org_golang_google_api//googleapi:go_default_library",
    ],
)
