load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "crypto_key.go",
        "crypto_key_alpha_yaml_embed.go",
        "crypto_key_internal.go",
        "key_ring.go",
        "key_ring_alpha_yaml_embed.go",
        "key_ring_internal.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/declarative-resource-client-library/services/google/cloudkms/alpha",
    visibility = ["//visibility:public"],
    deps = [
        "//dcl:go_default_library",
        "@org_golang_google_api//googleapi:go_default_library",
    ],
)
