load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "address.go",
        "address_internal.go",
        "autoscaler.go",
        "autoscaler_internal.go",
        "backend_bucket.go",
        "backend_bucket_internal.go",
        "client.go",
        "compute_utils.go",
        "disk.go",
        "disk_internal.go",
        "firewall.go",
        "firewall_internal.go",
        "forwarding_rule.go",
        "forwarding_rule_internal.go",
        "health_check.go",
        "health_check_internal.go",
        "image.go",
        "image_internal.go",
        "instance.go",
        "instance_group_manager.go",
        "instance_group_manager_internal.go",
        "instance_internal.go",
        "instance_template.go",
        "instance_template_internal.go",
        "legacy_health_check.go",
        "legacy_health_check_internal.go",
        "managed_ssl_certificate.go",
        "managed_ssl_certificate_internal.go",
        "network.go",
        "network_internal.go",
        "operations.go",
        "route.go",
        "route_internal.go",
        "router.go",
        "router_internal.go",
        "router_peer.go",
        "router_peer_internal.go",
        "ssl_certificate.go",
        "ssl_certificate_internal.go",
        "subnetwork.go",
        "subnetwork_internal.go",
        "target_http_proxy.go",
        "target_http_proxy_internal.go",
        "target_pool.go",
        "target_pool_internal.go",
        "target_vpn_gateway.go",
        "target_vpn_gateway_internal.go",
        "url_map.go",
        "url_map_internal.go",
        "vpn_gateway.go",
        "vpn_gateway_internal.go",
        "vpn_tunnel.go",
        "vpn_tunnel_internal.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/declarative-resource-client-library/services/google/compute/beta",
    visibility = ["//visibility:public"],
    deps = [
        "//dcl:go_default_library",
        "@com_github_mohae_deepcopy//:go_default_library",
        "@org_golang_google_api//googleapi:go_default_library",
    ],
)
