load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "compute_utils.go",
        "firewall_beta_yaml_embed.go",
        "firewall_policy.go",
        "firewall_policy_association.go",
        "firewall_policy_association_beta_yaml_embed.go",
        "firewall_policy_association_internal.go",
        "firewall_policy_beta_yaml_embed.go",
        "firewall_policy_internal.go",
        "firewall_policy_rule.go",
        "firewall_policy_rule_beta_yaml_embed.go",
        "firewall_policy_rule_internal.go",
        "forwarding_rule.go",
        "forwarding_rule_beta_yaml_embed.go",
        "forwarding_rule_internal.go",
        "instance_group_manager.go",
        "instance_group_manager_beta_yaml_embed.go",
        "instance_group_manager_internal.go",
        "route.go",
        "route_beta_yaml_embed.go",
        "route_internal.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/declarative-resource-client-library/services/google/compute/beta",
    visibility = ["//visibility:public"],
    deps = [
        "//dcl:go_default_library",
        "//dcl/operations:go_default_library",
        "@org_golang_google_api//googleapi:go_default_library",
    ],
)
