load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "feature.go",
        "feature_alpha_yaml_embed.go",
        "feature_internal.go",
        "feature_membership.go",
        "feature_membership_alpha_yaml_embed.go",
        "feature_membership_internal.go",
        "hub_utils.go",
        "membership.go",
        "membership_alpha_yaml_embed.go",
        "membership_internal.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/declarative-resource-client-library/services/google/gkehub/alpha",
    visibility = ["//visibility:public"],
    deps = [
        "//dcl:go_default_library",
        "//dcl/operations:go_default_library",
        "@org_golang_google_api//googleapi:go_default_library",
    ],
)
