load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "brand.go",
        "brand_beta_yaml_embed.go",
        "brand_internal.go",
        "client.go",
        "identity_aware_proxy_client.go",
        "identity_aware_proxy_client_beta_yaml_embed.go",
        "identity_aware_proxy_client_internal.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/declarative-resource-client-library/services/google/iap/beta",
    visibility = ["//visibility:public"],
    deps = [
        "//dcl:go_default_library",
        "@org_golang_google_api//googleapi:go_default_library",
    ],
)
